# ansuld

./: .gitignore  asld.uml  minal-simple.uml  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/asld/asld/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/asld/asld/tools/: ProcessTest.kt  SubProcessTest.kt
app/src/androidTest/java/org/minal/minal/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/minal/minal/tools/: ProcessTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/asld/asld/: DiyActivity.kt  DownloadImages.kt  FilesDebuggerActivity.kt  FirstFragment.kt  MainActivity.kt  OldTerminalActivity.kt  OriginShellActivity.kt  SecondFragment.kt  TerminalActivity.kt
app/src/main/java/com/asld/asld/service/: ShellDaemon.kt
app/src/main/java/com/asld/asld/tools/: CycleBufferReader.kt  Download.kt  Process.kt  ProgressBarDialog.kt  SubProcess.kt  exception.kt
app/src/main/java/com/asld/asld/tools/test/: hello.go
app/src/main/java/com/asld/asld/view/: TerminalView.kt
app/src/main/java/com/asld/asld/vnc/: COLORMODEL.java  ConnectionBean.java  InputHandler.java  Loading.kt  PointerInputHandler.java  Resolution.kt  TouchPad.kt  Utils.kt  VNCConn.java  VNCConnService.kt  VncActivity.kt  VncCanvas.java  VncPresentation.kt
app/src/main/java/org/minal/minal/: DownloadImages.kt  FilesDebuggerActivity.kt  MainActivity.kt  OriginShellActivity.kt  TerminalActivity.kt
app/src/main/java/org/minal/minal/service/: ShellDaemon.kt
app/src/main/java/org/minal/minal/tools/: CycleBufferReader.kt  Download.kt  Process.kt  ProgressBarDialog.kt  exception.kt
app/src/main/java/org/minal/minal/vnc/: COLORMODEL.java  ConnectionBean.java  InputHandler.java  Utils.kt  VNCConn.java  VNCConnService.kt  VncActivity.kt  VncCanvas.java  VncPresentation.kt
app/src/main/native/: CMakeLists.txt
app/src/main/native/cpp/: create_sub_process.cpp  create_sub_process.h  log.h  vnccanvas.c  vncconn.c
app/src/main/native/jni/: com_asld_asld_tools_ProcessUtil.cpp  com_asld_asld_tools_ProcessUtil.h  com_asld_asld_tools_SubProcess.cpp  com_asld_asld_tools_SubProcess.h  jni_helpers.h  org_minal_minal_tools_ProcessUtil.cpp  org_minal_minal_tools_ProcessUtil.h
app/src/main/outerlib/libjpeg-turbo/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJException.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java  YUVImage.java
app/src/main/res/drawable/: ic_switch_icon.xml  round_bg.xml
app/src/main/res/font/: font.xml
app/src/main/res/layout/: activity_diy.xml  activity_download_images.xml  activity_files_debugger.xml  activity_main.xml  activity_ternimal.xml  activity_touch_pad.xml  activity_vnc.xml  download_item.xml  fragment_vnc_login.xml  terminal_item.xml  vnc_canvas.xml  vnc_presentation.xml
app/src/main/res/menu/: menu_main.xml  menu_vnc.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  constant.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/asld/asld/: ExampleUnitTest.kt
app/src/test/java/com/asld/asld/tools/: DownloaderTest.kt
app/src/test/java/com/asld/minal/: ExampleUnitTest.kt
app/src/test/java/com/asld/minal/tools/: DownloaderTest.kt
gradle/wrapper/: gradle-wrapper.properties
uml/: BufferQueue.drawio  Modules.drawio  Modules_sys.drawio  Native原理.drawio  OutputQueue.drawio  android-muti-display.drawio  android_frame_works.drawio  android_fs.drawio  android_process_struct.drawio  chooseDisplay.drawio  create_process_call_stack.drawio  desktop_service_case.drawio  external_file_access.drawio  fileserver.drawio  frame_getter.drawio  fullRouteInit.drawio  glsurface-view.drawio  initVncServerAndClient_squence.drawio  input_system.drawio  jdk_replace.drawio  jni_fork.drawio  linux_fork.drawio  linux_fs.drawio  liunx_frame_works.drawio  minal-tech.drawio  minal_design.drawio  minal_io_struct.drawio  minal_struct.drawio  minal_struct_wireless.drawio  minal_structs.drawio  multithread_downlad.drawio  onDrawFrame.drawio  outputEvent.drawio  pointerScale.drawio  process_controler_uml.drawio  process_manager.drawio  proot_hook.drawio  remote_desktop_modules.drawio  shell_daemon_flow.drawio  so_dependencies.drawio  (+15 more)
